RenderEngine update_result() not showing intermediate result anymore #64153

Closed
opened 2019-05-04 23:32:05 +02:00 by Paul Melis · 8 comments

System Information
Operating system: Arch Linux
Graphics card: GTX 970

Blender Version
Broken: 2.80 (master, c68c81a870)

Short description of error

The function RenderEngine.update_result()method no longer seems to work, as intermediate results are not shown in the render view. Only the final rendered image is shown after end_result() is called.

It worked until recently (sorry, don't have a specific working hash).

Exact steps for others to reproduce the error

See test case based on the example from https://docs.blender.org/api/blender2.8/bpy.types.RenderEngine.html, which adds 4 "samples" in different colors and calls update_result() for each of them. The status information is updated, but the render view stays empty. Only after end_result() is called is the final result shown in the render view.

blender -P blender_render_engine.2.8.py -E CUSTOM
<F12>

blender_render_engine.2.8.py

**System Information** Operating system: Arch Linux Graphics card: GTX 970 **Blender Version** Broken: 2.80 (master, c68c81a870baa438a45e870aee677178632cce18) **Short description of error** The function `RenderEngine.update_result()`method no longer seems to work, as intermediate results are not shown in the render view. Only the final rendered image is shown after `end_result()` is called. It worked until recently (sorry, don't have a specific working hash). **Exact steps for others to reproduce the error** See test case based on the example from https://docs.blender.org/api/blender2.8/bpy.types.RenderEngine.html, which adds 4 "samples" in different colors and calls `update_result()` for each of them. The status information is updated, but the render view stays empty. Only after `end_result()` is called is the final result shown in the render view. ``` blender -P blender_render_engine.2.8.py -E CUSTOM <F12> ``` [blender_render_engine.2.8.py](https://archive.blender.org/developer/F7006143/blender_render_engine.2.8.py)
Author

Added subscriber: @PaulMelis

Added subscriber: @PaulMelis
Author

Had an older binary daily of 2.8 lying around, in 6439ed844e it still works

Had an older binary daily of 2.8 lying around, in 6439ed844e7814fdc65e675bc851642382b72b60 it still works
Author

Bisected down to 7cbb8f20a4 (probably, as I needed to skip 2 commits that didn't build, see log below).

Indeed, setting Viewport -> Image Display Method from Automatic to 2D Texture brings back image display during rendering. Setting it to GLSL makes the intermediate render results disappear again.

git bisect start
# bad: [1c58604070682a1fe01d6fd49820c1578f18580a] Depsgraph: fix Bone property drivers stored in Object animdata.
git bisect bad 1c58604070682a1fe01d6fd49820c1578f18580a
# good: [6439ed844e7814fdc65e675bc851642382b72b60] Cleanup: remove tabs after line start
git bisect good 6439ed844e7814fdc65e675bc851642382b72b60
# good: [1b49c7fdd1f0a9f4532593207ce6be775dc8581c] Cleanup: redundant select flush
git bisect good 1b49c7fdd1f0a9f4532593207ce6be775dc8581c
# good: [c14e6ee9a45c5c69cb07696403da54dcf05f7d9a] Cleanup: Line wrapping
git bisect good c14e6ee9a45c5c69cb07696403da54dcf05f7d9a
# good: [7e4db169f2ab8dd62281f0b42a6f7e33be5f32d6] T63644:  Editing while parented is not rotating correctly
git bisect good 7e4db169f2ab8dd62281f0b42a6f7e33be5f32d6
# bad: [047081841113da73d7a13886218f5a56cfc62de6] Fix T59848: precisely represent the dependencies of Armature modifier.
git bisect bad 047081841113da73d7a13886218f5a56cfc62de6
# bad: [5f888e65c3e765d5c176d3f54cf7d20d216441fc] Outliner: Show parenting hierarchy in view layer view
git bisect bad 5f888e65c3e765d5c176d3f54cf7d20d216441fc
# bad: [bba60bb564cf5a16cfcac744d4ba82cf8eba3da9] Cleanup: style, use braces for gpencil modifiers
git bisect bad bba60bb564cf5a16cfcac744d4ba82cf8eba3da9
# bad: [33df4b78d0a48dab8b3dc78d6bae4c12a93a2bf2] make.bat: remove --expand-tabs from "make format" on windows.
git bisect bad 33df4b78d0a48dab8b3dc78d6bae4c12a93a2bf2
# good: [857b63f1d492eb48b40ce87abffc95d11e21803d] Cleanup: re-use test for ELEM & STR_ELEM
git bisect good 857b63f1d492eb48b40ce87abffc95d11e21803d
# bad: [40d8a407d79f5feba82966e6ba6c5ecd3d20fb3a] Fix invalid stack memory use with GPencil drawing
git bisect bad 40d8a407d79f5feba82966e6ba6c5ecd3d20fb3a
# skip: [7cbb8f20a4b479380dac1d2a2f7c7f85ede408be] GPU: automatically draw images with GLSL shader depending on resolution
git bisect skip 7cbb8f20a4b479380dac1d2a2f7c7f85ede408be
# skip: [f22397206f4d20ffbc862c02b025c572be900866] NLA: check that properties are animatable.
git bisect skip f22397206f4d20ffbc862c02b025c572be900866
# good: [ed0c9654ddfdcbe19d8094d4b4a43f0f06d9ee5c] Cleanup: remove unused OpenGL functions, rename some for clarity
git bisect good ed0c9654ddfdcbe19d8094d4b4a43f0f06d9ee5c
# bad: [b24dfff9b70815e3dd2d7ea4fb925add30fee206] Fix error in recent image preference change
git bisect bad b24dfff9b70815e3dd2d7ea4fb925add30fee206
- only skipped commits left to test
- possible first bad commit: [b24dfff9b70815e3dd2d7ea4fb925add30fee206] Fix error in recent image preference change
- possible first bad commit: [f22397206f4d20ffbc862c02b025c572be900866] NLA: check that properties are animatable.
- possible first bad commit: [7cbb8f20a4b479380dac1d2a2f7c7f85ede408be] GPU: automatically draw images with GLSL shader depending on resolution
Bisected down to 7cbb8f20a4b479380dac1d2a2f7c7f85ede408be (probably, as I needed to skip 2 commits that didn't build, see log below). Indeed, setting Viewport -> Image Display Method from Automatic to 2D Texture brings back image display during rendering. Setting it to GLSL makes the intermediate render results disappear again. ``` git bisect start # bad: [1c58604070682a1fe01d6fd49820c1578f18580a] Depsgraph: fix Bone property drivers stored in Object animdata. git bisect bad 1c58604070682a1fe01d6fd49820c1578f18580a # good: [6439ed844e7814fdc65e675bc851642382b72b60] Cleanup: remove tabs after line start git bisect good 6439ed844e7814fdc65e675bc851642382b72b60 # good: [1b49c7fdd1f0a9f4532593207ce6be775dc8581c] Cleanup: redundant select flush git bisect good 1b49c7fdd1f0a9f4532593207ce6be775dc8581c # good: [c14e6ee9a45c5c69cb07696403da54dcf05f7d9a] Cleanup: Line wrapping git bisect good c14e6ee9a45c5c69cb07696403da54dcf05f7d9a # good: [7e4db169f2ab8dd62281f0b42a6f7e33be5f32d6] T63644: Editing while parented is not rotating correctly git bisect good 7e4db169f2ab8dd62281f0b42a6f7e33be5f32d6 # bad: [047081841113da73d7a13886218f5a56cfc62de6] Fix T59848: precisely represent the dependencies of Armature modifier. git bisect bad 047081841113da73d7a13886218f5a56cfc62de6 # bad: [5f888e65c3e765d5c176d3f54cf7d20d216441fc] Outliner: Show parenting hierarchy in view layer view git bisect bad 5f888e65c3e765d5c176d3f54cf7d20d216441fc # bad: [bba60bb564cf5a16cfcac744d4ba82cf8eba3da9] Cleanup: style, use braces for gpencil modifiers git bisect bad bba60bb564cf5a16cfcac744d4ba82cf8eba3da9 # bad: [33df4b78d0a48dab8b3dc78d6bae4c12a93a2bf2] make.bat: remove --expand-tabs from "make format" on windows. git bisect bad 33df4b78d0a48dab8b3dc78d6bae4c12a93a2bf2 # good: [857b63f1d492eb48b40ce87abffc95d11e21803d] Cleanup: re-use test for ELEM & STR_ELEM git bisect good 857b63f1d492eb48b40ce87abffc95d11e21803d # bad: [40d8a407d79f5feba82966e6ba6c5ecd3d20fb3a] Fix invalid stack memory use with GPencil drawing git bisect bad 40d8a407d79f5feba82966e6ba6c5ecd3d20fb3a # skip: [7cbb8f20a4b479380dac1d2a2f7c7f85ede408be] GPU: automatically draw images with GLSL shader depending on resolution git bisect skip 7cbb8f20a4b479380dac1d2a2f7c7f85ede408be # skip: [f22397206f4d20ffbc862c02b025c572be900866] NLA: check that properties are animatable. git bisect skip f22397206f4d20ffbc862c02b025c572be900866 # good: [ed0c9654ddfdcbe19d8094d4b4a43f0f06d9ee5c] Cleanup: remove unused OpenGL functions, rename some for clarity git bisect good ed0c9654ddfdcbe19d8094d4b4a43f0f06d9ee5c # bad: [b24dfff9b70815e3dd2d7ea4fb925add30fee206] Fix error in recent image preference change git bisect bad b24dfff9b70815e3dd2d7ea4fb925add30fee206 - only skipped commits left to test - possible first bad commit: [b24dfff9b70815e3dd2d7ea4fb925add30fee206] Fix error in recent image preference change - possible first bad commit: [f22397206f4d20ffbc862c02b025c572be900866] NLA: check that properties are animatable. - possible first bad commit: [7cbb8f20a4b479380dac1d2a2f7c7f85ede408be] GPU: automatically draw images with GLSL shader depending on resolution ```

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-05-06 16:47:08 +02:00

Thanks for bisecting!

Thanks for bisecting!

This issue was referenced by blender/cycles@b2524f2c98

This issue was referenced by blender/cycles@b2524f2c988a0edb101ae80ef36db50642a3bb5e

This issue was referenced by c11bfb519f

This issue was referenced by c11bfb519fd2520fbe46914313bb56e2b646a340

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64153
No description provided.