Fix T64153: RenderEngine.update_result does not show result immediately